--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.373.0",
-    "next": "14.2.1",
+    "next": "^14.2.3",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-phone-input-2": "^2.15.1",
@@ -44,6 +44,7 @@
     "@storybook/test": "^8.0.8",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "daisyui": "^4.10.2",
