--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^6.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
